--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="us">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,9 @@
     </div>
     <div class="rudder-slider-container">
       <input type="range" min="-45" max="45" value="0" step="0.1" />
-      <div class="rudder-slider-ticks"></div>
+      <div class="rudder-slider-ticks">
+        <div class="rudder-slider-center-mark"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
